refactor: separate use case interfaces from service implementations
- Create use case interfaces for each service responsibility
- Refactor services to implement their corresponding use cases
- Add Source enum for type-safe candidate source tracking
- Update dependency injection to use use case interfaces

Services refactored:
- AiRankingService -> PredictRankingUseCase
- CandidateSelectionService -> SelectCandidatesUseCase
- FeatureExtractionService -> ExtractFeaturesUseCase
- FeedCacheService -> CacheFeedUseCase
- FeedRankingService -> RankFeedUseCase
- GetFeedService -> GetFeedUseCase (already existed)

Co-Authored-By: Claude Sonnet 4 <noreply@anthropic.com>